--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     ctx.drawImage(karte, 23, 23)
     write(auswahl[aktStadt].name, 28, 39, 19, '#006', 'left')
     write(`Fehler: ${punkte} km`, 28, 60, 13, '#006', 'left')
-    write(`${aktStadt + 1}/${anzStaedte} Städten`, 28, 76, 13, '#006', 'left')
+    write(`${aktStadt + 1}/${anzStaedte} Städte`, 28, 76, 13, '#006', 'left')
 
     circle(versuch.x, versuch.y, 3, 'red')
 
